parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> block
Rule 2     block -> instruction block
Rule 3     block -> condition block
Rule 4     block -> loop block
Rule 5     block -> funcdef block
Rule 6     block -> instruction
Rule 7     block -> condition
Rule 8     block -> loop
Rule 9     block -> funcdef
Rule 10    funcdef -> LET NAME LPAREN declarg RPAREN block END
Rule 11    funcdef -> LET NAME LPAREN RPAREN block END
Rule 12    statement -> RETURN expression
Rule 13    statement -> NAME LPAREN callarg RPAREN
Rule 14    statement -> NAME LPAREN RPAREN
Rule 15    expression -> NAME LPAREN callarg RPAREN
Rule 16    expression -> NAME LPAREN RPAREN
Rule 17    declarg -> NAME COMMA declarg
Rule 18    declarg -> NAME
Rule 19    callarg -> expression COMMA callarg
Rule 20    callarg -> expression
Rule 21    instruction -> statement SEMICOLON
Rule 22    instruction -> expression SEMICOLON
Rule 23    statement -> NAME AFFECT expression
Rule 24    statement -> VAR NAME
Rule 25    statement -> VAR NAME AFFECT expression
Rule 26    condition -> IF LPAREN boolexpr RPAREN block END
Rule 27    condition -> IF LPAREN boolexpr RPAREN block ELSE block END
Rule 28    loop -> WHILE LPAREN boolexpr RPAREN block END
Rule 29    loop -> UNTIL LPAREN boolexpr RPAREN block END
Rule 30    loop -> FOR LPAREN NAME SEMICOLON boolexpr SEMICOLON statement RPAREN block END
Rule 31    boolexpr -> boolexpr COR boolexpr
Rule 32    boolexpr -> expression CAND expression
Rule 33    boolexpr -> expression GT expression
Rule 34    boolexpr -> expression LT expression
Rule 35    boolexpr -> expression LOE expression
Rule 36    boolexpr -> expression GOE expression
Rule 37    boolexpr -> expression EQUALS expression
Rule 38    boolexpr -> expression DIFFERENT expression
Rule 39    expression -> PRINT LPAREN expression RPAREN
Rule 40    expression -> expression PLUS expression
Rule 41    expression -> expression TIMES expression
Rule 42    expression -> expression MINUS expression
Rule 43    expression -> expression DIVIDE expression
Rule 44    expression -> expression OR expression
Rule 45    expression -> expression AND expression
Rule 46    expression -> LPAREN expression RPAREN
Rule 47    expression -> NUMBER
Rule 48    expression -> NAME

Terminals, with rules where they appear

AFFECT               : 23 25
AND                  : 45
CAND                 : 32
COMMA                : 17 19
COR                  : 31
DIFFERENT            : 38
DIVIDE               : 43
ELSE                 : 27
END                  : 10 11 26 27 28 29 30
EQUALS               : 37
FOR                  : 30
GOE                  : 36
GT                   : 33
IF                   : 26 27
LET                  : 10 11
LOE                  : 35
LPAREN               : 10 11 13 14 15 16 26 27 28 29 30 39 46
LT                   : 34
MINUS                : 42
NAME                 : 10 11 13 14 15 16 17 18 23 24 25 30 48
NUMBER               : 47
OR                   : 44
PLUS                 : 40
PRINT                : 39
RETURN               : 12
RPAREN               : 10 11 13 14 15 16 26 27 28 29 30 39 46
SEMICOLON            : 21 22 30 30
TIMES                : 41
UNTIL                : 29
VAR                  : 24 25
WHILE                : 28
error                : 

Nonterminals, with rules where they appear

block                : 1 2 3 4 5 10 11 26 27 27 28 29 30
boolexpr             : 26 27 28 29 30 31 31
callarg              : 13 15 19
condition            : 3 7
declarg              : 10 17
expression           : 12 19 20 22 23 25 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 40 40 41 41 42 42 43 43 44 44 45 45 46
funcdef              : 5 9
instruction          : 2 6
loop                 : 4 8
start                : 0
statement            : 21 30

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . block
    (2) block -> . instruction block
    (3) block -> . condition block
    (4) block -> . loop block
    (5) block -> . funcdef block
    (6) block -> . instruction
    (7) block -> . condition
    (8) block -> . loop
    (9) block -> . funcdef
    (21) instruction -> . statement SEMICOLON
    (22) instruction -> . expression SEMICOLON
    (26) condition -> . IF LPAREN boolexpr RPAREN block END
    (27) condition -> . IF LPAREN boolexpr RPAREN block ELSE block END
    (28) loop -> . WHILE LPAREN boolexpr RPAREN block END
    (29) loop -> . UNTIL LPAREN boolexpr RPAREN block END
    (30) loop -> . FOR LPAREN NAME SEMICOLON boolexpr SEMICOLON statement RPAREN block END
    (10) funcdef -> . LET NAME LPAREN declarg RPAREN block END
    (11) funcdef -> . LET NAME LPAREN RPAREN block END
    (12) statement -> . RETURN expression
    (13) statement -> . NAME LPAREN callarg RPAREN
    (14) statement -> . NAME LPAREN RPAREN
    (23) statement -> . NAME AFFECT expression
    (24) statement -> . VAR NAME
    (25) statement -> . VAR NAME AFFECT expression
    (15) expression -> . NAME LPAREN callarg RPAREN
    (16) expression -> . NAME LPAREN RPAREN
    (39) expression -> . PRINT LPAREN expression RPAREN
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression MINUS expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression OR expression
    (45) expression -> . expression AND expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NUMBER
    (48) expression -> . NAME

    IF              shift and go to state 9
    WHILE           shift and go to state 11
    UNTIL           shift and go to state 12
    FOR             shift and go to state 13
    LET             shift and go to state 15
    RETURN          shift and go to state 16
    NAME            shift and go to state 14
    VAR             shift and go to state 17
    PRINT           shift and go to state 18
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 19

    start                          shift and go to state 1
    block                          shift and go to state 2
    instruction                    shift and go to state 3
    condition                      shift and go to state 4
    loop                           shift and go to state 5
    funcdef                        shift and go to state 6
    statement                      shift and go to state 7
    expression                     shift and go to state 8

state 1

    (0) S' -> start .



state 2

    (1) start -> block .

    $end            reduce using rule 1 (start -> block .)


state 3

    (2) block -> instruction . block
    (6) block -> instruction .
    (2) block -> . instruction block
    (3) block -> . condition block
    (4) block -> . loop block
    (5) block -> . funcdef block
    (6) block -> . instruction
    (7) block -> . condition
    (8) block -> . loop
    (9) block -> . funcdef
    (21) instruction -> . statement SEMICOLON
    (22) instruction -> . expression SEMICOLON
    (26) condition -> . IF LPAREN boolexpr RPAREN block END
    (27) condition -> . IF LPAREN boolexpr RPAREN block ELSE block END
    (28) loop -> . WHILE LPAREN boolexpr RPAREN block END
    (29) loop -> . UNTIL LPAREN boolexpr RPAREN block END
    (30) loop -> . FOR LPAREN NAME SEMICOLON boolexpr SEMICOLON statement RPAREN block END
    (10) funcdef -> . LET NAME LPAREN declarg RPAREN block END
    (11) funcdef -> . LET NAME LPAREN RPAREN block END
    (12) statement -> . RETURN expression
    (13) statement -> . NAME LPAREN callarg RPAREN
    (14) statement -> . NAME LPAREN RPAREN
    (23) statement -> . NAME AFFECT expression
    (24) statement -> . VAR NAME
    (25) statement -> . VAR NAME AFFECT expression
    (15) expression -> . NAME LPAREN callarg RPAREN
    (16) expression -> . NAME LPAREN RPAREN
    (39) expression -> . PRINT LPAREN expression RPAREN
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression MINUS expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression OR expression
    (45) expression -> . expression AND expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NUMBER
    (48) expression -> . NAME

    $end            reduce using rule 6 (block -> instruction .)
    END             reduce using rule 6 (block -> instruction .)
    ELSE            reduce using rule 6 (block -> instruction .)
    IF              shift and go to state 9
    WHILE           shift and go to state 11
    UNTIL           shift and go to state 12
    FOR             shift and go to state 13
    LET             shift and go to state 15
    RETURN          shift and go to state 16
    NAME            shift and go to state 14
    VAR             shift and go to state 17
    PRINT           shift and go to state 18
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 19

    instruction                    shift and go to state 3
    block                          shift and go to state 20
    condition                      shift and go to state 4
    loop                           shift and go to state 5
    funcdef                        shift and go to state 6
    statement                      shift and go to state 7
    expression                     shift and go to state 8

state 4

    (3) block -> condition . block
    (7) block -> condition .
    (2) block -> . instruction block
    (3) block -> . condition block
    (4) block -> . loop block
    (5) block -> . funcdef block
    (6) block -> . instruction
    (7) block -> . condition
    (8) block -> . loop
    (9) block -> . funcdef
    (21) instruction -> . statement SEMICOLON
    (22) instruction -> . expression SEMICOLON
    (26) condition -> . IF LPAREN boolexpr RPAREN block END
    (27) condition -> . IF LPAREN boolexpr RPAREN block ELSE block END
    (28) loop -> . WHILE LPAREN boolexpr RPAREN block END
    (29) loop -> . UNTIL LPAREN boolexpr RPAREN block END
    (30) loop -> . FOR LPAREN NAME SEMICOLON boolexpr SEMICOLON statement RPAREN block END
    (10) funcdef -> . LET NAME LPAREN declarg RPAREN block END
    (11) funcdef -> . LET NAME LPAREN RPAREN block END
    (12) statement -> . RETURN expression
    (13) statement -> . NAME LPAREN callarg RPAREN
    (14) statement -> . NAME LPAREN RPAREN
    (23) statement -> . NAME AFFECT expression
    (24) statement -> . VAR NAME
    (25) statement -> . VAR NAME AFFECT expression
    (15) expression -> . NAME LPAREN callarg RPAREN
    (16) expression -> . NAME LPAREN RPAREN
    (39) expression -> . PRINT LPAREN expression RPAREN
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression MINUS expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression OR expression
    (45) expression -> . expression AND expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NUMBER
    (48) expression -> . NAME

    $end            reduce using rule 7 (block -> condition .)
    END             reduce using rule 7 (block -> condition .)
    ELSE            reduce using rule 7 (block -> condition .)
    IF              shift and go to state 9
    WHILE           shift and go to state 11
    UNTIL           shift and go to state 12
    FOR             shift and go to state 13
    LET             shift and go to state 15
    RETURN          shift and go to state 16
    NAME            shift and go to state 14
    VAR             shift and go to state 17
    PRINT           shift and go to state 18
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 19

    condition                      shift and go to state 4
    block                          shift and go to state 21
    instruction                    shift and go to state 3
    loop                           shift and go to state 5
    funcdef                        shift and go to state 6
    statement                      shift and go to state 7
    expression                     shift and go to state 8

state 5

    (4) block -> loop . block
    (8) block -> loop .
    (2) block -> . instruction block
    (3) block -> . condition block
    (4) block -> . loop block
    (5) block -> . funcdef block
    (6) block -> . instruction
    (7) block -> . condition
    (8) block -> . loop
    (9) block -> . funcdef
    (21) instruction -> . statement SEMICOLON
    (22) instruction -> . expression SEMICOLON
    (26) condition -> . IF LPAREN boolexpr RPAREN block END
    (27) condition -> . IF LPAREN boolexpr RPAREN block ELSE block END
    (28) loop -> . WHILE LPAREN boolexpr RPAREN block END
    (29) loop -> . UNTIL LPAREN boolexpr RPAREN block END
    (30) loop -> . FOR LPAREN NAME SEMICOLON boolexpr SEMICOLON statement RPAREN block END
    (10) funcdef -> . LET NAME LPAREN declarg RPAREN block END
    (11) funcdef -> . LET NAME LPAREN RPAREN block END
    (12) statement -> . RETURN expression
    (13) statement -> . NAME LPAREN callarg RPAREN
    (14) statement -> . NAME LPAREN RPAREN
    (23) statement -> . NAME AFFECT expression
    (24) statement -> . VAR NAME
    (25) statement -> . VAR NAME AFFECT expression
    (15) expression -> . NAME LPAREN callarg RPAREN
    (16) expression -> . NAME LPAREN RPAREN
    (39) expression -> . PRINT LPAREN expression RPAREN
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression MINUS expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression OR expression
    (45) expression -> . expression AND expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NUMBER
    (48) expression -> . NAME

    $end            reduce using rule 8 (block -> loop .)
    END             reduce using rule 8 (block -> loop .)
    ELSE            reduce using rule 8 (block -> loop .)
    IF              shift and go to state 9
    WHILE           shift and go to state 11
    UNTIL           shift and go to state 12
    FOR             shift and go to state 13
    LET             shift and go to state 15
    RETURN          shift and go to state 16
    NAME            shift and go to state 14
    VAR             shift and go to state 17
    PRINT           shift and go to state 18
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 19

    loop                           shift and go to state 5
    block                          shift and go to state 22
    instruction                    shift and go to state 3
    condition                      shift and go to state 4
    funcdef                        shift and go to state 6
    statement                      shift and go to state 7
    expression                     shift and go to state 8

state 6

    (5) block -> funcdef . block
    (9) block -> funcdef .
    (2) block -> . instruction block
    (3) block -> . condition block
    (4) block -> . loop block
    (5) block -> . funcdef block
    (6) block -> . instruction
    (7) block -> . condition
    (8) block -> . loop
    (9) block -> . funcdef
    (21) instruction -> . statement SEMICOLON
    (22) instruction -> . expression SEMICOLON
    (26) condition -> . IF LPAREN boolexpr RPAREN block END
    (27) condition -> . IF LPAREN boolexpr RPAREN block ELSE block END
    (28) loop -> . WHILE LPAREN boolexpr RPAREN block END
    (29) loop -> . UNTIL LPAREN boolexpr RPAREN block END
    (30) loop -> . FOR LPAREN NAME SEMICOLON boolexpr SEMICOLON statement RPAREN block END
    (10) funcdef -> . LET NAME LPAREN declarg RPAREN block END
    (11) funcdef -> . LET NAME LPAREN RPAREN block END
    (12) statement -> . RETURN expression
    (13) statement -> . NAME LPAREN callarg RPAREN
    (14) statement -> . NAME LPAREN RPAREN
    (23) statement -> . NAME AFFECT expression
    (24) statement -> . VAR NAME
    (25) statement -> . VAR NAME AFFECT expression
    (15) expression -> . NAME LPAREN callarg RPAREN
    (16) expression -> . NAME LPAREN RPAREN
    (39) expression -> . PRINT LPAREN expression RPAREN
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression MINUS expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression OR expression
    (45) expression -> . expression AND expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NUMBER
    (48) expression -> . NAME

    $end            reduce using rule 9 (block -> funcdef .)
    END             reduce using rule 9 (block -> funcdef .)
    ELSE            reduce using rule 9 (block -> funcdef .)
    IF              shift and go to state 9
    WHILE           shift and go to state 11
    UNTIL           shift and go to state 12
    FOR             shift and go to state 13
    LET             shift and go to state 15
    RETURN          shift and go to state 16
    NAME            shift and go to state 14
    VAR             shift and go to state 17
    PRINT           shift and go to state 18
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 19

    funcdef                        shift and go to state 6
    block                          shift and go to state 23
    instruction                    shift and go to state 3
    condition                      shift and go to state 4
    loop                           shift and go to state 5
    statement                      shift and go to state 7
    expression                     shift and go to state 8

state 7

    (21) instruction -> statement . SEMICOLON

    SEMICOLON       shift and go to state 24


state 8

    (22) instruction -> expression . SEMICOLON
    (40) expression -> expression . PLUS expression
    (41) expression -> expression . TIMES expression
    (42) expression -> expression . MINUS expression
    (43) expression -> expression . DIVIDE expression
    (44) expression -> expression . OR expression
    (45) expression -> expression . AND expression

    SEMICOLON       shift and go to state 25
    PLUS            shift and go to state 26
    TIMES           shift and go to state 27
    MINUS           shift and go to state 28
    DIVIDE          shift and go to state 29
    OR              shift and go to state 30
    AND             shift and go to state 31


state 9

    (26) condition -> IF . LPAREN boolexpr RPAREN block END
    (27) condition -> IF . LPAREN boolexpr RPAREN block ELSE block END

    LPAREN          shift and go to state 32


state 10

    (46) expression -> LPAREN . expression RPAREN
    (15) expression -> . NAME LPAREN callarg RPAREN
    (16) expression -> . NAME LPAREN RPAREN
    (39) expression -> . PRINT LPAREN expression RPAREN
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression MINUS expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . expression OR expression
    (45) expression -> . expression AND expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NUMBER
    (48) expression -> . NAME

    NAME            shift and go to state 34
    PRINT           shift and go to state 18
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 19

    expression                     shift and go to state 33

state 11
